docs/api/qiskit/0.43/qiskit.transpiler.passes.ALAPScheduleAnalysis.mdx
---
title: ALAPScheduleAnalysis
description: API reference for qiskit.transpiler.passes.ALAPScheduleAnalysis
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.ALAPScheduleAnalysis
---

# ALAPScheduleAnalysis

<Class id="qiskit.transpiler.passes.ALAPScheduleAnalysis" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/transpiler/passes/scheduling/scheduling/alap.py" signature="ALAPScheduleAnalysis(*args, **kwargs)">
  Bases: `BaseScheduler`

  ALAP Scheduling pass, which schedules the **stop** time of instructions as late as possible.

  See the [Scheduling Stage](transpiler#scheduling-stage) section in the [`qiskit.transpiler`](transpiler#module-qiskit.transpiler "qiskit.transpiler") module documentation for the detailed behavior of the control flow operation, i.e. `c_if`.

  Scheduler initializer.

  **Parameters**

  *   **durations** – Durations of instructions to be used in scheduling
  *   **target** – The [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") representing the target backend, if both `durations` and this are specified then this argument will take precedence and `durations` will be ignored.

  ## Methods

  <span id="qiskit-transpiler-passes-alapscheduleanalysis-name" />

  ### name

  <Function id="qiskit.transpiler.passes.ALAPScheduleAnalysis.name" name="name" signature="ALAPScheduleAnalysis.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-alapscheduleanalysis-run" />

  ### run

  <Function id="qiskit.transpiler.passes.ALAPScheduleAnalysis.run" name="run" signature="ALAPScheduleAnalysis.run(dag)">
    Run the ALAPSchedule pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to schedule.

    **Returns**

    A scheduled DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

    **Raises**

    *   [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if the circuit is not mapped on physical qubits.
    *   [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – if conditional bit is added to non-supported instruction.
  </Function>

  ## Attributes

  ### CONDITIONAL\_SUPPORTED

  <Attribute id="qiskit.transpiler.passes.ALAPScheduleAnalysis.CONDITIONAL_SUPPORTED" name="CONDITIONAL_SUPPORTED" attributeValue="= (<class 'qiskit.circuit.gate.Gate'>, <class 'qiskit.circuit.delay.Delay'>)" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.ALAPScheduleAnalysis.is_analysis_pass" name="is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.ALAPScheduleAnalysis.is_transformation_pass" name="is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

